zetasql/compliance/testdata/analytic_cume_dist.test
[load_proto_files=zetasql/testdata/test_schema.proto]
[load_enum_names=zetasql_test__.TestEnum]
[prepare_database]
CREATE TABLE TestTable AS
SELECT cast(1 as int64) as row_id,
       cast(null as bool) as bool_val,
       cast(null as int64) as int64_val,
       cast(null as int32) as int32_val,
       cast(null as string) as str_val UNION ALL
  SELECT 2,  true,  null, null,  null  UNION ALL
  SELECT 3,  false, 1,    1,     "A"   UNION ALL
  SELECT 4,  true,  1,    2,     "A"   UNION ALL
  SELECT 5,  false, 1,    3,     "aA"   UNION ALL
  SELECT 6,  true,  2,    2,     "Aa"   UNION ALL
  SELECT 7,  false, 1,    1,     'a'   UNION ALL
  SELECT 8,  true,  2,    1,     "a"   UNION ALL
  SELECT 9,  false, 2,    3,     "b"   UNION ALL
  SELECT 10, true,  2,    1,     "B"
--
ARRAY<STRUCT<row_id INT64,
             bool_val BOOL,
             int64_val INT64,
             int32_val INT32,
             str_val STRING>>
[
  {1, NULL, NULL, NULL, NULL},
  {2, true, NULL, NULL, NULL},
  {3, false, 1, 1, "A"},
  {4, true, 1, 2, "A"},
  {5, false, 1, 3, "aA"},
  {6, true, 2, 2, "Aa"},
  {7, false, 1, 1, "a"},
  {8, true, 2, 1, "a"},
  {9, false, 2, 3, "b"},
  {10, true, 2, 1, "B"}
]
==

[prepare_database]
CREATE TABLE TableDateTimeBytes AS
SELECT cast(1 as int64) as row_id,
       cast(null as date) as date_val,
       cast(null as timestamp) as timestamp_val,
       cast(null as bytes) as bytes_val UNION ALL
SELECT 2,
       cast('2014-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("1" as bytes) UNION ALL
SELECT 3,
       cast('2014-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("2" as bytes) UNION ALL
SELECT 4,
       cast('2015-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("1" as bytes) UNION ALL
SELECT 5,
       cast('2015-01-01' as date),
       TIMESTAMP '2013-01-01 00:00:01.011011 UTC',
       cast("2" as bytes) UNION ALL
SELECT 6,
       cast('2014-01-01' as date),
       TIMESTAMP '2015-01-01 00:00:01.011011 UTC',
       cast("5" as bytes)
--
ARRAY<STRUCT<
        row_id INT64,
        date_val DATE,
        timestamp_val TIMESTAMP,
        bytes_val BYTES
      >>
[{1, NULL, NULL, NULL},
 {
   2,
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   b"1"
 },
 {
   3,
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   b"2"
 },
 {
   4,
   2015-01-01,
   2014-01-01 00:00:01.011011+00,
   b"1"
 },
 {
   5,
   2015-01-01,
   2013-01-01 00:00:01.011011+00,
   b"2"
 },
 {
   6,
   2014-01-01,
   2015-01-01 00:00:01.011011+00,
   b"5"
 }]
==

[default required_features=ANALYTIC_FUNCTIONS]
[name=cume_dist_int64]
SELECT bool_val, int64_val,
       CUME_DIST() OVER (PARTITION BY bool_val ORDER BY int64_val)
FROM TestTable
--
ARRAY<STRUCT<bool_val BOOL, int64_val INT64, DOUBLE>>[
  {NULL, NULL, 1},
  {false, 1, 0.75},
  {false, 1, 0.75},
  {false, 1, 0.75},
  {false, 2, 1},
  {true, NULL, 0.2},
  {true, 1, 0.4},
  {true, 2, 1},
  {true, 2, 1},
  {true, 2, 1}
]
==

[name=cume_dist_bool]
SELECT bool_val, CUME_DIST() OVER (ORDER BY bool_val)
FROM TestTable
--
ARRAY<STRUCT<bool_val BOOL, DOUBLE>>[
  {NULL, 0.1},
  {false, 0.5},
  {false, 0.5},
  {false, 0.5},
  {false, 0.5},
  {true, 1},
  {true, 1},
  {true, 1},
  {true, 1},
  {true, 1}
]
==

[name=cume_dist_str_int64]
SELECT str_val, int64_val,
       CUME_DIST() OVER (ORDER BY str_val, int64_val DESC)
FROM TestTable
--
ARRAY<STRUCT<str_val STRING, int64_val INT64, DOUBLE>>[
  {NULL, NULL, 0.2},
  {NULL, NULL, 0.2},
  {"A", 1, 0.4},
  {"A", 1, 0.4},
  {"Aa", 2, 0.5},
  {"B", 2, 0.6},
  {"a", 2, 0.7},
  {"a", 1, 0.8},
  {"aA", 1, 0.9},
  {"b", 2, 1}
]
==

[test_features1=V_1_1_ORDER_BY_COLLATE]
[name=cume_dist_collate]
SELECT str_val, int64_val,
       CUME_DIST() OVER (ORDER BY str_val COLLATE "en_US", int64_val DESC)
FROM TestTable
ORDER BY str_val COLLATE "en_US"
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_1_ORDER_BY_COLLATE
ARRAY<STRUCT<str_val STRING, int64_val INT64, DOUBLE>>[
  {NULL, NULL, 0.2},
  {NULL, NULL, 0.2},
  {"a", 1, 0.4},
  {"a", 2, 0.3},
  {"A", 1, 0.6},
  {"A", 1, 0.6},
  {"aA", 1, 0.7},
  {"Aa", 2, 0.8},
  {"b", 2, 0.9},
  {"B", 2, 1}
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: COLLATE is not supported [at 2:43]
       CUME_DIST() OVER (ORDER BY str_val COLLATE "en_US", int64_val DESC)
                                          ^
==

[name=cume_dist_int32_uint64]
SELECT int32_val, cast(int64_val as uint64),
       CUME_DIST() OVER (ORDER BY int32_val, cast(int64_val as uint64) ASC)
FROM TestTable
--
ARRAY<STRUCT<int32_val INT32, UINT64, DOUBLE>>[
  {NULL, NULL, 0.2},
  {NULL, NULL, 0.2},
  {1, 1, 0.4},
  {1, 1, 0.4},
  {1, 2, 0.6},
  {1, 2, 0.6},
  {2, 1, 0.7},
  {2, 2, 0.8},
  {3, 1, 0.9},
  {3, 2, 1}
]
==

[name=cume_dist_uint32_int64]
SELECT cast(int32_val as uint32), int64_val,
       CUME_DIST() OVER (ORDER BY cast(int32_val as uint32), int64_val)
FROM TestTable
--
ARRAY<STRUCT<UINT32, int64_val INT64, DOUBLE>>[
  {NULL, NULL, 0.2},
  {NULL, NULL, 0.2},
  {1, 1, 0.4},
  {1, 1, 0.4},
  {1, 2, 0.6},
  {1, 2, 0.6},
  {2, 1, 0.7},
  {2, 2, 0.8},
  {3, 1, 0.9},
  {3, 2, 1}
]
==

[name=cume_dist_enum]
SELECT enum_val, CUME_DIST() OVER (ORDER BY enum_val DESC)
FROM (SELECT CAST(0 AS `zetasql_test__.TestEnum`) as enum_val UNION ALL
      SELECT CAST(1 AS `zetasql_test__.TestEnum`)             UNION ALL
      SELECT CAST(1 AS `zetasql_test__.TestEnum`)             UNION ALL
      SELECT CAST(2 AS `zetasql_test__.TestEnum`)             UNION ALL
      SELECT CAST(2 AS `zetasql_test__.TestEnum`)             UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`)          UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`))
--
ARRAY<STRUCT<
        enum_val ENUM<zetasql_test__.TestEnum>,
        DOUBLE
      >>
[
  {TESTENUM2, 0.2857142857142857},
  {TESTENUM2, 0.2857142857142857},
  {TESTENUM1, 0.5714285714285714},
  {TESTENUM1, 0.5714285714285714},
  {TESTENUM0, 0.7142857142857143},
  {NULL, 1},
  {NULL, 1}
]
==

[name=cume_dist_double]
SELECT double_val, CUME_DIST() OVER (ORDER BY double_val)
FROM (SELECT CAST(0 AS DOUBLE) as double_val UNION ALL
      SELECT CAST(1 AS DOUBLE)               UNION ALL
      SELECT CAST(null AS DOUBLE)            UNION ALL
      SELECT CAST(null AS DOUBLE)            UNION ALL
      SELECT CAST("NaN" AS DOUBLE)           UNION ALL
      SELECT CAST("inf" AS DOUBLE)           UNION ALL
      SELECT CAST("inf" AS DOUBLE)           UNION ALL
      SELECT CAST("NaN" AS DOUBLE)           UNION ALL
      SELECT CAST("-inf" AS DOUBLE)          UNION ALL
      SELECT CAST("-inf" AS DOUBLE))
--
ARRAY<STRUCT<double_val DOUBLE, DOUBLE>>[
  {NULL, 0.2},
  {NULL, 0.2},
  {nan, 0.4},
  {nan, 0.4},
  {-inf, 0.6},
  {-inf, 0.6},
  {0, 0.7},
  {1, 0.8},
  {inf, 1},
  {inf, 1}
]
==

[name=cume_dist_float]
SELECT float_val, CUME_DIST() OVER (ORDER BY float_val)
FROM (SELECT CAST(0 AS FLOAT) as float_val  UNION ALL
      SELECT CAST(1 AS FLOAT)               UNION ALL
      SELECT CAST(null AS FLOAT)            UNION ALL
      SELECT CAST(null AS FLOAT)            UNION ALL
      SELECT CAST("NaN" AS FLOAT)           UNION ALL
      SELECT CAST("inf" AS FLOAT)           UNION ALL
      SELECT CAST("inf" AS FLOAT)           UNION ALL
      SELECT CAST("NaN" AS FLOAT)           UNION ALL
      SELECT CAST("-inf" AS FLOAT)          UNION ALL
      SELECT CAST("-inf" AS FLOAT))
--
ARRAY<STRUCT<float_val FLOAT, DOUBLE>>[
  {NULL, 0.2},
  {NULL, 0.2},
  {nan, 0.4},
  {nan, 0.4},
  {-inf, 0.6},
  {-inf, 0.6},
  {0, 0.7},
  {1, 0.8},
  {inf, 1},
  {inf, 1}
]
==

[name=cume_dist_date_timestamp]
SELECT date_val, timestamp_val,
       CUME_DIST() OVER (ORDER BY date_val, timestamp_val)
FROM TableDateTimeBytes
--
ARRAY<STRUCT<
        date_val DATE,
        timestamp_val TIMESTAMP,
        DOUBLE
      >>
[{NULL, NULL, 0.16666666666666666},
 {
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   0.5
 },
 {
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   0.5
 },
 {
   2014-01-01,
   2015-01-01 00:00:01.011011+00,
   0.66666666666666663
 },
 {
   2015-01-01,
   2013-01-01 00:00:01.011011+00,
   0.83333333333333337
 },
 {
   2015-01-01,
   2014-01-01 00:00:01.011011+00,
   1
 }]
==

[name=cume_dist_bytes]
SELECT bytes_val,
       CUME_DIST() OVER (ORDER BY bytes_val)
FROM TableDateTimeBytes
--
ARRAY<STRUCT<bytes_val BYTES, DOUBLE>>[
  {NULL, 0.16666666666666666},
  {b"1", 0.5},
  {b"1", 0.5},
  {b"2", 0.83333333333333337},
  {b"2", 0.83333333333333337},
  {b"5", 1}
]
==

[required_features=ANALYTIC_FUNCTIONS,NUMERIC_TYPE]
[name=cume_dist__numeric]
[parameters="99999999999999999999999999999.999999999" as max_val,
            "-99999999999999999999999999999.999999999" as min_val]
SELECT CUME_DIST() OVER(ORDER BY numeric_val)
FROM (SELECT CAST(NULL as NUMERIC) numeric_val UNION ALL
      SELECT 0                                 UNION ALL
      SELECT 3.5                               UNION ALL
      SELECT -1.230000001                      UNION ALL
      SELECT CAST(@max_val AS NUMERIC)         UNION ALL
      SELECT CAST(@min_val AS NUMERIC))
--
ARRAY<STRUCT<DOUBLE>>[
  {0.16666666666666666},
  {0.33333333333333331},
  {0.5},
  {0.66666666666666663},
  {0.83333333333333337},
  {1}
]
==

[name=cume_dist_no_orderby]
SELECT CUME_DIST() OVER ()
FROM TestTable
--
ERROR: generic::invalid_argument: Window ORDER BY is required for analytic function cume_dist [at 1:25]
SELECT CUME_DIST() OVER ()
                        ^
==

[name=cume_dist_window]
SELECT row_id, CUME_DIST() OVER (ORDER BY bool_val ROWS 2 PRECEDING)
FROM TestTable
--
ERROR: generic::invalid_argument: Window framing clause is not allowed for analytic function cume_dist [at 1:52]
SELECT row_id, CUME_DIST() OVER (ORDER BY bool_val ROWS 2 PRECEDING)
                                                   ^
